<resources>
  <string name="app_name">Backpacking Egypt</string>
  <string name="display_name">Display name</string>
  <string name="username">Username</string>
  <string name="a_short_bio">A short bio</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="re_enter_password">Re-enter Password</string>
  <string name="create_account">Create Account</string>
  <string name="already_a_member_login">Already a member? Log in!</string>
  <string name="country">Country</string>
  <string name="logo">Logo</string>
  <string name="login">Log in</string>
  <string name="no_account_yet_create_one">No account yet? Create one!</string>
  <string name="request_failed">Something went wrong. Please try again later</string>
  <string name="name_error">Display name can\'t be empty</string>
  <string name="username_error">Username can\'t be empty</string>
  <string name="password_regex">
    <![CDATA[^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=]).{4,}$]]></string>
  <string name="please_wait">Please wait…</string>
  <string name="title_activity_home">HomeActivity</string>
  <string name="title_home">Home</string>
  <string name="title_explore">Explore</string>
  <string name="title_profile">Profile</string>
  <string name="loading">Loading…</string>
  <string name="account_created">Account created!</string>
  <string name="email_validation">Enter a valid email address</string>
  <string name="password_validation">Passwords must contain uppercase letters, numbers, and symbols.</string>
  <string name="password_re_validation">Passwords don\'t match</string>
  <string name="login_failed">Login failed</string>
</resources>