<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    >

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/colorPrimary"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

      <TextView
          android:id="@+id/toolbar_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:fontFamily="cursive"
          android:text="@string/app_name"
          android:textColor="@android:color/white"
          android:textSize="20sp"
          android:textStyle="bold"
          tools:ignore="RelativeOverlap"
          />
    </RelativeLayout>
  </android.support.v7.widget.Toolbar>

  <ImageView
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="24dp"
      android:contentDescription="@string/logo"
      android:src="@drawable/logo"
      />

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/LoginETs"
      >
    <EditText
        android:id="@+id/login_username_et"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/LoginETs"
      >
    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        />
  </android.support.design.widget.TextInputLayout>

  <android.support.v7.widget.AppCompatButton
      android:id="@+id/login_btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="24dp"
      android:background="@color/colorAccent"
      android:padding="8dp"
      android:text="@string/login"
      />

  <TextView
      android:id="@+id/login_signup_link_tv"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:gravity="center"
      android:text="@string/no_account_yet_create_one"
      android:textColor="@android:color/white"
      android:textSize="16sp"
      />
</LinearLayout>