<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    >

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/colorPrimary"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

      <TextView
          android:id="@+id/toolbar_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:fontFamily="cursive"
          android:text="@string/app_name"
          android:textColor="@android:color/white"
          android:textSize="20sp"
          android:textStyle="bold"
          tools:ignore="RelativeOverlap"
          />
    </RelativeLayout>

  </android.support.v7.widget.Toolbar>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fitsSystemWindows="true"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="32dp"
        >

      <ImageView
          android:layout_width="72dp"
          android:layout_height="72dp"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="24dp"
          android:src="@drawable/logo"
          />

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          >
        <EditText
            android:id="@+id/signup_display_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/display_name"
            android:inputType="textPersonName"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginTop="8dp"
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          >
        <EditText
            android:id="@+id/signuo_username_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:inputType="textPersonName"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginTop="8dp"
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          >
        <EditText
            android:id="@+id/login_username_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
      </android.support.design.widget.TextInputLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginTop="16dp"
          android:orientation="horizontal"
          android:padding="4dp"
          >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/country"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            />

        <Spinner
            android:id="@+id/countries_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            >
        </Spinner>
      </LinearLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginTop="8dp"
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          >
        <EditText
            android:id="@+id/signup_bio_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/a_short_bio"
            android:inputType="textMultiLine"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginTop="8dp"
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          >
        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginTop="8dp"
          android:textColor="@android:color/white"
          android:textColorHint="@android:color/white"
          >
        <EditText
            android:id="@+id/signup_password_re_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.v7.widget.AppCompatButton
          android:id="@+id/signup_create_account_btn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="24dp"
          android:layout_marginTop="24dp"
          android:background="@color/colorAccent"
          android:padding="12dp"
          android:text="@string/create_account"
          />

      <TextView
          android:id="@+id/signup_login_tv"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="16dp"
          android:gravity="center"
          android:text="@string/already_a_member_login"
          android:textColor="@android:color/white"
          android:textSize="16sp"
          />
    </LinearLayout>
  </ScrollView>
</LinearLayout>